Product kısmının başlanması ve temel işlemlerin yapılması .

--- a/Frontends/MultiShot.WebUI/Areas/Admin/Views/Category/UpdateCategory.cshtml
+++ b/Frontends/MultiShot.WebUI/Areas/Admin/Views/Category/UpdateCategory.cshtml
@@ -1,4 +1,4 @@
-﻿@model MultiShop.DtoLayer.CatalogDtos.CategoryDtos.UpdateCategoryDto
+﻿@model UpdateCategoryDto
 
 @{
     ViewData["Title"] = "UpdateCategory";
