--- a/Frontends/MultiShot.WebUI/Areas/Admin/Views/Category/CreateCategory.cshtml
+++ b/Frontends/MultiShot.WebUI/Areas/Admin/Views/Category/CreateCategory.cshtml
@@ -1,4 +1,4 @@
-﻿@model MultiShop.DtoLayer.CatalogDtos.CategoryDtos.CreateCategoryDto
+﻿@model CreateCategoryDto
 
 @{
     ViewData["Title"] = "CreateCategory";
