--- a/Frontends/MultiShot.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShot.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using MultiShot.WebUI
 @using MultiShot.WebUI.Models
 @using MultiShop.DtoLayer
+@using MultiShop.DtoLayer.CatalogDtos.CategoryDtos
+@using MultiShop.DtoLayer.CatalogDtos.ProductDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
