--- a/Frontends/MultiShot.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/Frontends/MultiShot.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -11,7 +11,13 @@
         <ul class="sidebar-menu" data-widget="tree">
             <li class="header dark-bg">Menü</li>
             <li><a href="/Admin/Category/Index/"> <i class="fa fa-th"></i><span>Kategoriler</span></a></li>
-            <li><a href="#"> <i class="fa fa-car"></i><span>Ürünler</span></a></li>
+            <li><a href="/Admin/Product/ProductListWithCategory/"> <i class="fa fa-car"></i><span>Ürünler</span></a></li>
+            <li><a href="/Default/Index/"> <i class="fa fa-map-pin"></i><span>Siteye Git</span></a></li>
+            <li><a href="/Admin/SpecialOffer/Index/"> <i class="fa fa-cubes"></i><span>Özel Teklifler</span></a></li>
+            <li><a href="/Admin/FeatureSlider/Index/"> <i class="fa fa-picture-o"></i><span>Slider Paneli</span></a></li>
+            <li><a href="/Admin/Feature/Index/"> <i class="fa fa-anchor"></i><span>Öne Çıkan Alan Paneli</span></a></li>
+
+
         </ul>
         <!-- sidebar-menu -->
     </section>
