--- a/Frontends/MultiShot.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShot.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -3,4 +3,7 @@
 @using MultiShop.DtoLayer
 @using MultiShop.DtoLayer.CatalogDtos.CategoryDtos
 @using MultiShop.DtoLayer.CatalogDtos.ProductDtos
+@using MultiShop.DtoLayer.CatalogDtos.FeatureSliderDtos
+@using MultiShop.DtoLayer.CatalogDtos.SpecialOfferDtos
+@using MultiShop.DtoLayer.CatalogDtos.FeatureDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
