--- a/Frontends/MultiShot.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShot.WebUI/Views/_ViewImports.cshtml
@@ -1,4 +1,11 @@
 ﻿@using MultiShot.WebUI
 @using MultiShot.WebUI.Models
-@using MultiShop.DtoLayer
+@using MultiShop.DtoLayer.CatalogDtos.FeatureSliderDtos
+@using MultiShop.DtoLayer.CatalogDtos.SpecialOfferDtos
+@using MultiShop.DtoLayer.CatalogDtos.OfferDiscountDtos
+@using MultiShop.DtoLayer.CatalogDtos.FeatureDtos
+@using MultiShop.DtoLayer.CatalogDtos.CategoryDtos
+
+
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
