--- a/Frontends/MultiShot.WebUI/Views/Shared/Components/_OfferDiscountDefaultComponentPartial/Default.cshtml
+++ b/Frontends/MultiShot.WebUI/Views/Shared/Components/_OfferDiscountDefaultComponentPartial/Default.cshtml
@@ -1,5 +1,4 @@
-﻿@model List<ResultSpecialOfferDto>
-
+﻿@model List<ResultOfferDiscountDto>
 <div class="container-fluid pt-5 pb-3">
     <div class="row px-xl-5">
         @foreach (var item in Model)
@@ -10,7 +9,7 @@
                     <div class="offer-text">
                         <h6 class="text-white text-uppercase">@item.Title</h6>
                         <h3 class="text-white mb-3">@item.SubTitle</h3>
-                        <a href="" class="btn btn-primary">Hemen al</a>
+                        <a href="" class="btn btn-primary">@item.ButtonTitle</a>
                     </div>
                 </div>
             </div>
