--- a/Frontends/MultiShot.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShot.WebUI/Views/_ViewImports.cshtml
@@ -5,6 +5,8 @@
 @using MultiShop.DtoLayer.CatalogDtos.OfferDiscountDtos
 @using MultiShop.DtoLayer.CatalogDtos.FeatureDtos
 @using MultiShop.DtoLayer.CatalogDtos.CategoryDtos
+@using MultiShop.DtoLayer.CatalogDtos.ProductDtos
+@using MultiShop.DtoLayer.CatalogDtos.BrandDtos
 
 
 
