Kategoriye göre ürünlerin listelenmesi ...

--- a/Frontends/MultiShot.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShot.WebUI/Views/_ViewImports.cshtml
@@ -7,6 +7,7 @@
 @using MultiShop.DtoLayer.CatalogDtos.CategoryDtos
 @using MultiShop.DtoLayer.CatalogDtos.ProductDtos
 @using MultiShop.DtoLayer.CatalogDtos.BrandDtos
+@using MultiShop.DtoLayer.CatalogDtos.AboutDtos
 
 
 
