--- a/Frontends/MultiShot.WebUI/Views/ProductList/Index.cshtml
+++ b/Frontends/MultiShot.WebUI/Views/ProductList/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Index";
     Layout = "~/Views/UILayout/_UILayout.cshtml";
 }
@@ -21,7 +20,6 @@
         <div class="col-lg-3 col-md-4">
 
             @await Component.InvokeAsync("_ProductListPriceFilterComponentPartial")
-
             @await Component.InvokeAsync("_ProductListColorFilterComponentPartial")
 
             @await Component.InvokeAsync("_ProductListSizeFilterComponentPartial")
@@ -33,7 +31,7 @@
 
                 @await Component.InvokeAsync("_ProductListGetProductCountComponentPartial")
 
-                @await Component.InvokeAsync("_ProductListComponentPartial")
+                @await Component.InvokeAsync("_ProductListComponentPartial", new { id = ViewBag.i })
 
                 @await Component.InvokeAsync("_ProductListPaginationComponentPartial")
 
