ProductDetail ve ProductImage admin ve ui tarafına consume edildi .

--- a/Frontends/MultiShot.WebUI/Views/Shared/Components/_FeatureProductsDefaultComponentPartial/Default.cshtml
+++ b/Frontends/MultiShot.WebUI/Views/Shared/Components/_FeatureProductsDefaultComponentPartial/Default.cshtml
@@ -11,7 +11,7 @@
             <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
                 <div class="product-item bg-light mb-4">
                     <div class="product-img position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="@item.ProductImageUrl" alt="">
+                            <img class="img-fluid w-100" src="@item.ProductImageUrl" alt=""> 
                         <div class="product-action">
                             <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>
                             <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>
@@ -20,7 +20,7 @@
                         </div>
                     </div>
                     <div class="text-center py-4">
-                        <a class="h6 text-decoration-none text-truncate" href="">@item.ProductName</a>
+                        <a class="h6 text-decoration-none text-truncate" href="/ProductList/ProductDetail/@item.ProductId">@item.ProductName</a>
                         <div class="d-flex align-items-center justify-content-center mt-2">
                             <h5>@item.ProductPrice ₺</h5><h6 class="text-muted ml-2"><del>@x ₺</del></h6>
                         </div>
