--- a/Frontends/MultiShot.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShot.WebUI/Views/_ViewImports.cshtml
@@ -8,6 +8,8 @@
 @using MultiShop.DtoLayer.CatalogDtos.ProductDtos
 @using MultiShop.DtoLayer.CatalogDtos.BrandDtos
 @using MultiShop.DtoLayer.CatalogDtos.AboutDtos
+@using MultiShop.DtoLayer.CatalogDtos.ProductImageDtos
+@using MultiShop.DtoLayer.CatalogDtos.ProductDetailDtos
 
 
 
