--- a/Frontends/MultiShot.WebUI/Views/ProductList/ProductDetail.cshtml
+++ b/Frontends/MultiShot.WebUI/Views/ProductList/ProductDetail.cshtml
@@ -18,9 +18,9 @@
 <div class="container-fluid pb-5">
     <div class="row px-xl-5">
 
-        @await Component.InvokeAsync("_ProductDetailImageSliderComponentPartial")
+        @await Component.InvokeAsync("_ProductDetailImageSliderComponentPartial", new { id = ViewBag.x })
 
-        @await Component.InvokeAsync("_ProductDetailFeatureComponentPartial")
+        @await Component.InvokeAsync("_ProductDetailFeatureComponentPartial",new  {id=ViewBag.x})
 
     </div>
     <div class="row px-xl-5">
@@ -33,9 +33,9 @@
                 </div>
                 <div class="tab-content">
 
-                    @await Component.InvokeAsync("_ProductDetailDescriptionComponentPartial")
+                    @await Component.InvokeAsync("_ProductDetailDescriptionComponentPartial", new { id = ViewBag.x })
 
-                    @await Component.InvokeAsync("_ProductDetailInformationComponentPartial")
+                    @await Component.InvokeAsync("_ProductDetailInformationComponentPartial", new { id = ViewBag.x })
 
                     @await Component.InvokeAsync("_ProductDetailReviewComponentPartial")
 
