Comment Mikroservisinin oluşturulup Admin ve UI tarafına consume edilmesi ...

--- a/Frontends/MultiShot.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShot.WebUI/Views/_ViewImports.cshtml
@@ -10,6 +10,7 @@
 @using MultiShop.DtoLayer.CatalogDtos.AboutDtos
 @using MultiShop.DtoLayer.CatalogDtos.ProductImageDtos
 @using MultiShop.DtoLayer.CatalogDtos.ProductDetailDtos
+@using MultiShop.DtoLayer.CommentDto
 
 
 
