--- a/Frontends/MultiShot.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShot.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -11,6 +11,7 @@
 @using MultiShop.DtoLayer.CatalogDtos.AboutDtos
 @using MultiShop.DtoLayer.CatalogDtos.ProductImageDtos
 @using MultiShop.DtoLayer.CatalogDtos.ProductDetailDtos
+@using MultiShop.DtoLayer.CommentDto
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
