--- a/Frontends/MultiShot.WebUI/Views/ProductList/ProductDetail.cshtml
+++ b/Frontends/MultiShot.WebUI/Views/ProductList/ProductDetail.cshtml
@@ -20,7 +20,7 @@
 
         @await Component.InvokeAsync("_ProductDetailImageSliderComponentPartial", new { id = ViewBag.x })
 
-        @await Component.InvokeAsync("_ProductDetailFeatureComponentPartial",new  {id=ViewBag.x})
+        @await Component.InvokeAsync("_ProductDetailFeatureComponentPartial", new { id = ViewBag.x })
 
     </div>
     <div class="row px-xl-5">
@@ -29,7 +29,7 @@
                 <div class="nav nav-tabs mb-4">
                     <a class="nav-item nav-link text-dark active" data-toggle="tab" href="#tab-pane-1">Ürün Detayı</a>
                     <a class="nav-item nav-link text-dark" data-toggle="tab" href="#tab-pane-2">Ürün Bilgileri</a>
-                    <a class="nav-item nav-link text-dark" data-toggle="tab" href="#tab-pane-3">Yorumlar (1)</a>
+                    <a class="nav-item nav-link text-dark" data-toggle="tab" href="#tab-pane-3">Yorumlar</a>
                 </div>
                 <div class="tab-content">
 
@@ -37,8 +37,9 @@
 
                     @await Component.InvokeAsync("_ProductDetailInformationComponentPartial", new { id = ViewBag.x })
 
-                    @await Component.InvokeAsync("_ProductDetailReviewComponentPartial")
+                    @await Component.InvokeAsync("_ProductDetailReviewComponentPartial", new { id = ViewBag.x })
 
+                    @*     @await Html.PartialAsync("~/Views/ProductList/AddComment.cshtml",new {id=ViewBag.x})  *@
 
                 </div>
             </div>
