Contact api consume edildi  ve register login işlemlerine başlandı ...

--- a/Frontends/MultiShot.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShot.WebUI/Views/_ViewImports.cshtml
@@ -10,7 +10,9 @@
 @using MultiShop.DtoLayer.CatalogDtos.AboutDtos
 @using MultiShop.DtoLayer.CatalogDtos.ProductImageDtos
 @using MultiShop.DtoLayer.CatalogDtos.ProductDetailDtos
+@using MultiShop.DtoLayer.CatalogDtos.ContactDtos
 @using MultiShop.DtoLayer.CommentDto
+
 
 
 
