--- a/Frontends/MultiShot.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShot.WebUI/Views/_ViewImports.cshtml
@@ -2,7 +2,7 @@
 @using MultiShot.WebUI.Models
 @using MultiShop.DtoLayer.CatalogDtos.FeatureSliderDtos
 @using MultiShop.DtoLayer.CatalogDtos.SpecialOfferDtos
-@using MultiShop.DtoLayer.CatalogDtos.OfferDiscountDtos
+@using   MultiShop.DtoLayer.CatalogDtos.OfferDiscountDtos
 @using MultiShop.DtoLayer.CatalogDtos.FeatureDtos
 @using MultiShop.DtoLayer.CatalogDtos.CategoryDtos
 @using MultiShop.DtoLayer.CatalogDtos.ProductDtos
@@ -11,6 +11,8 @@
 @using MultiShop.DtoLayer.CatalogDtos.ProductImageDtos
 @using MultiShop.DtoLayer.CatalogDtos.ProductDetailDtos
 @using MultiShop.DtoLayer.CatalogDtos.ContactDtos
+@using MultiShop.DtoLayer.IdentityDtos.RegisterDtos
+@using MultiShop.DtoLayer.IdentityDtos.LoginDtos
 @using MultiShop.DtoLayer.CommentDto
 
 
