Katalog servisleri ApiGatewaye taşındı ve artık direk http ile çağırmıyoruz ...

--- a/Frontends/MultiShot.WebUI/Views/UILayout/_UILayout.cshtml
+++ b/Frontends/MultiShot.WebUI/Views/UILayout/_UILayout.cshtml
@@ -1,16 +1,19 @@
-﻿
-@{
+﻿@{
     Layout = null;
 }
+
 <!DOCTYPE html>
 <html lang="en">
 
 @await Component.InvokeAsync("_HeadUILayoutComponentPartial")
 
 <body>
+
     @await Component.InvokeAsync("_TopbarUILayoutComponentPartial")
 
     @await Component.InvokeAsync("_NavbarUILayoutComponentPartial")
+
+    @await Component.InvokeAsync("_DirectoryAlertUILayoutComponentPartial")
 
     @RenderBody()
 
@@ -19,6 +22,4 @@
     @await Component.InvokeAsync("_ScriptUILayoutComponentPartial")
 
 </body>
-
 </html>
-
