Discount Haric Sepet kısmı tamamlandı  ...

--- a/Frontends/MultiShot.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShot.WebUI/Views/_ViewImports.cshtml
@@ -14,6 +14,7 @@
 @using MultiShop.DtoLayer.IdentityDtos.RegisterDtos
 @using MultiShop.DtoLayer.IdentityDtos.LoginDtos
 @using MultiShop.DtoLayer.CommentDto
+@using MultiShop.DtoLayer.BasketDtos
 
 
 
