--- a/Frontends/MultiShot.WebUI/Views/Shared/Components/_FeatureProductsDefaultComponentPartial/Default.cshtml
+++ b/Frontends/MultiShot.WebUI/Views/Shared/Components/_FeatureProductsDefaultComponentPartial/Default.cshtml
@@ -11,9 +11,9 @@
             <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
                 <div class="product-item bg-light mb-4">
                     <div class="product-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="@item.ProductImageUrl" alt=""> 
+                        <img class="img-fluid w-100" src="@item.ProductImageUrl" alt="">
                         <div class="product-action">
-                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>
+                            <a class="btn btn-outline-dark btn-square" href="/ShoppingCart/AddBasketItem/@item.ProductId"><i class="fa fa-shopping-cart"></i></a>
                             <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>
                             <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>
                             <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>
