Message mikroservisi oluşturuldu. Api çalışıyor fakat frontendde sorun çıktı ...

--- a/Frontends/MultiShot.WebUI/Areas/User/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShot.WebUI/Areas/User/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using MultiShot.WebUI
 @using MultiShot.WebUI.Models
 @using MultiShop.DtoLayer.OrderDtos.OrderOrderingDtos
+@using MultiShop.DtoLayer.MessageDtos
 
 
 
