--- a/Frontends/MultiShot.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShot.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -12,6 +12,9 @@
 @using MultiShop.DtoLayer.CatalogDtos.ProductImageDtos
 @using MultiShop.DtoLayer.CatalogDtos.ProductDetailDtos
 @using MultiShop.DtoLayer.CommentDto
+@using MultiShop.DtoLayer.IdentityDtos.UserDtos
+@using MultiShop.DtoLayer.CargoDtos.CargoCompanyDtos
+@using MultiShop.DtoLayer.CargoDtos.CargoCustomerDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
